# MurderEngine-old-

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MakeIt.txt  Makefile  MurderEngine  Poop  README.md  build.py  cmake_install.cmake  lol.txt  makeit  sourcelist.cmake  template.txt
src/engine/: CMakeLists.txt  EngineInit.cpp  EngineInit.h  EngineInit.hpp  EngineManager.cpp  EngineManager.h  MakeIt.txt  MurderEngine.cpp  MurderEngine.h  MurderEngine.hpp  script.sh  sources.txt
src/engine/algorithm/: MakeIt.txt  algorithm.hpp
src/engine/audio/: CMakeLists.txt  MakeIt.txt  audio.h  audio.hpp  audio_system.cpp  audio_system.h  audio_system.hpp
src/engine/events/: engine_event.h  engine_event.hpp  event.h  input_event.h
src/engine/kernel/: CMakeLists.txt  MakeIt.txt  array_utils.hpp  common.hpp  kernel.cpp  kernel.h  kernel.hpp  log.hpp  string.cpp  string.hpp  variable.hpp
src/engine/loader/: CMakeLists.txt  MakeIt.txt  archive_format.h  audio_format.h  audio_format.hpp  file_format.cpp  file_format.h  image_format.h  image_format.hpp  markup_lang.h  mesh_format.cpp  mesh_format.h  scene_format.cpp  scene_format.h  shader_loader.cpp  shader_loader.hpp
src/engine/loaders/: ImageReader.cpp  ImageReader.h  file_format.cpp  file_format.h  formats.h  image_reader.cpp  image_reader.h  mesh_loader.cpp  mesh_loader.h  mesh_reader.cpp  mesh_reader.h  shader_loader.cpp  shader_loader.h  shader_reader.cpp  shader_reader.h
src/engine/math/: CMakeLists.txt  MakeIt.txt  geometry.h  geometry.hpp  maths.cpp  maths.h  maths.hpp  matrix.h  matrix.hpp  transform.h  transform.hpp  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.hpp  vector_utils.cpp  vector_utils.h  vector_utils.hpp  vectors.cpp  vectors.h  vectors.hpp
src/engine/nodes/: node.h  node.hpp
src/engine/opengl/: opengl_api.cpp
src/engine/renderer/: CMakeLists.txt  MakeIt.txt  OpenGLApi.cpp  OpenGLApi.h  RendererApi.h  me_renderer.h  opengl_api.cpp  opengl_api.h  renderer_api.h  shader_program.h  vulkan_api.cpp  vulkan_api.h
src/engine/scene/: CMakeLists.txt  MakeIt.txt  camera.h  camera.hpp  item.cpp  item.h  item.hpp  light.h  light.hpp  material.h  material.hpp  mesh.h  mesh.hpp  metadata.h  metadata.hpp  scene.cpp  scene.h  scene.hpp  scene_content.h  shader.h  texture.cpp  texture.h  texture.hpp
(+264 files in other folders)
